# obs-build

./: CMakeLists.txt  configure.cmake
